Fixed z-index of snippet being dragged

--- a/src/snippendrop/static/style.css
+++ b/src/snippendrop/static/style.css
@@ -46,6 +46,7 @@ textarea {
 .snippet.dragging {
     opacity: 0.5;
     -webkit-opacity: 0.5;
+    z-index: 999;
 }
 
 .close-icon {
